Navigatielink toegevoegd, studentnummer

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <div id="stappen">
 
                     <nav>
+                        <a href="./1033177.html">1. Studentnummer</a>
                         <a href="#voorbereiding">1. Voorbereiding</a>
                         <a href="#eigen-pagina">2. Eigen pagina</a>
                         <a href="#merge-conflict">3. Merge conflict</a>
